--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -140,7 +140,7 @@
         <!--------------------scroll-reveal--------------------------------------------------->
         <script src="https://unpkg.com/scrollreveal"></script>
 
-        <script src="portfolio.js"></script>
+        <script src="index.js"></script>
     </div>
 </body>
 
